--- a/config/samples/application.yaml
+++ b/config/samples/application.yaml
@@ -2,6 +2,7 @@ apiVersion: aperture.io/v1alpha1
 kind: Application
 metadata:
   name: application-example
+  namespace: default
 spec:
   image: nginx:latest
   replicas: 2
