--- a/config/rbac/role_binding.yaml
+++ b/config/rbac/role_binding.yaml
@@ -16,4 +16,4 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: controller-manager
-    namespace: k8s-operato-example-system
+    namespace: default
